--- a/OurAlarm/app/src/main/res/values/strings.xml
+++ b/OurAlarm/app/src/main/res/values/strings.xml
@@ -10,7 +10,9 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="time">Alarm Time</string>
+    <string name="message_title_text">Alarm Message</string>
     <string name="repeat">Repeat</string>
     <string name="title_activity_result">Result</string>
+    <string name="text_edit_hint_message">メッセージを入力ください</string>
 
 </resources>
